<resources>
    <string name="app_name">bbs</string>
    <string name="action_settings">Settings</string>
    <string name="username_label">欢迎使用HiYoung Appium Demo APP</string>
    <string name="password_label">输入密码：</string>
    <string name="password_confirm_label">确认密码：</string>
    <string name="register_button">注册</string>
    <string name="reset_button">重置</string>
    <string name="items_rb_label">单元按钮：</string>
    <string name="items_rb_man">男</string>
    <string name="items_rb_women">女</string>
    <string name="items_hobby_label">多选按钮：</string>
    <string name="items_hobby_reading">看书</string>
    <string name="items_hobby_swimming">游泳</string>
    <string name="items_hobby_running">跑步</string>
</resources>
