<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.BaseItemsActivity">

    <LinearLayout
        android:id="@+id/edit_area"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:text="文本输入"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            app:layout_constraintBaseline_toBaselineOf="@id/base_rb_man"
            />
        <EditText
            android:id="@+id/edit_text"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rb_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_area"
        >
        <TextView
            android:text="@string/items_rb_label"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            app:layout_constraintBaseline_toBaselineOf="@id/base_rb_man"
            />

        <RadioGroup
            android:id="@+id/baseItemsRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/base_rb_man"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/items_rb_man"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/base_rb_women"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/items_rb_women"
                />
        </RadioGroup>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/cb_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rb_area"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/base_hobby_label"
            android:text="@string/items_hobby_label"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/base_hobby_reading"
            />

        <CheckBox
            android:id="@+id/base_hobby_reading"
            android:text="@string/items_hobby_reading"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            />

        <CheckBox
            android:id="@+id/base_hobby_swimming"
            android:text="@string/items_hobby_swimming"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            />

        <CheckBox
            android:id="@+id/base_hobby_running"
            android:text="@string/items_hobby_running"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/toggle_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_area">

        <TextView
            android:text="Toggle 按钮："
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBaseline_toBaselineOf="@id/toggle_bt"
            />
        <ToggleButton
            android:id="@+id/toggle_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
        <Switch
            android:id="@+id/switch_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/seekbar_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/toggle_area"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:text="拖动条："
            app:layout_constraintBaseline_toBaselineOf="@id/seekbar" />
        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:max="100" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rating_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/seekbar_area"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:text="星级评价："
            app:layout_constraintBaseline_toBaselineOf="@id/ratingbar" />
        <RatingBar
            android:id="@+id/ratingbar"
            android:numStars="5"
            android:rating="5.0"
            android:stepSize="0.5"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/listview_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/rating_area"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:text="下拉列表："
            />
        <Spinner
            android:id="@+id/sprinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/listview_area"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <Button
            android:id="@+id/base_item_submit_button"
            android:text="提交"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp" />
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
